--- a/brostyle.css
+++ b/brostyle.css
@@ -16,13 +16,14 @@ body {
   height: 10vh;
 }
 header {
+  
   margin: 0px auto;
   width: 70%;
   height: 100%;
   display: flex;
-  border-radius: 0px 0px 10px 10px;
+  border-radius: 0px 0px 30px 30px;
   justify-content: space-between;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 0px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .icon {
@@ -240,11 +241,12 @@ header {
 .card_sec {
   box-shadow: rgba(0, 0, 0, 0.45) 0px -20px 20px -30px;
   width: 100vw;
-  background-color: rgba(245, 245, 220, 0.576);
+  background-color: rgba(245, 238, 220, 0.762);
+  padding: 30px;
 }
 .holder {
   width: 40%;
-  margin: 0px auto;
+  margin: 0px auto 40px ;
 }
 .head {
   margin: 20px 0px 40px 0px;
@@ -276,29 +278,29 @@ header {
   place-self: center;
   border-radius: 10px;
   width: 100%;
-  height: 14rem;
+  height: 13rem;
   transition: all linear 0.2s 0s;
   color: white;
-  padding: 20px;
+  padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 .i1 {
-  background-color: skyblue;
+  background-color: rgb(50, 153, 194);
 }
 .i2 {
-  background-color: rgba(255, 0, 0, 0.468);
+  background-color: rgba(135, 36, 36, 0.468);
 }
 .i3 {
-  background-color: rgb(148, 235, 135);
+  background-color: rgb(62, 198, 41);
 }
 .i4 {
-  background-color: rgb(135, 235, 227);
+  background-color: rgb(2, 67, 61);
 }
 .i5 {
-  background-color: rgb(235, 165, 135);
+  background-color: rgb(232, 107, 53);
 }
 .i6 {
-  background-color: rgb(65, 24, 112);
+  background-color: rgb(42, 10, 78);
 }
 .item h3 {
   font-size: 1rem;
@@ -307,7 +309,7 @@ header {
   margin: 0px 0px 20px 0px;
 }
 .item p {
-  margin: 20px;
+  margin: 10px;
   text-align: center;
   font-family: "open sans";
   font-size: 0.7rem;
@@ -322,15 +324,16 @@ header {
 }
 .item img {
   width: 100%;
+
   border-radius: 50%;
   width: 3rem;
 }
-.item:hover {
+ .item:hover {
   transform: scale(1.06);
 }
 .item p:hover {
   color: rgb(44, 43, 43);
-}
+} 
 @keyframes rollin {
   0% {
     opacity: 0;
@@ -340,4 +343,68 @@ header {
     opacity: 100;
     transform: translateX(0);
   }
+} 
+.testimonial{
+  width: 75%;
+  margin: 0px auto 100pxF ;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.test_head{
+  display: flex;
+  justify-content: center;
+  font-family: "roboto";
+  font-size: 1.5rem;
+  color: grey;
+}
+.test_card{
+  display: flex;
+  justify-content: center;
+  height:80%;
+}
+.test_item{
+  width: 27%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  height:13rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 10px ;
+}
+.test_item p{
+  text-align: center;
+  padding:15px;
+  color: rgb(53, 49, 49);
+  font-size: 0.8rem;
+  font-family: "roboto";
+  margin: 0px 0px 5px 0px;
+}
+.test_img{
+  display: flex;
+  justify-content: center;
+  width: 20%;
+  height: 25%;
+  margin:0px auto 0px auto ;
+}
+.test_img img{
+  width: 90%;
+  height: 100%;
+  border-radius: 50%;
+}
+.name{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 5px auto;
+}
+#name{
+  font-family: "inter";
+  color: blueviolet;
+}
+
+#desigg{
+  font-family: "open sans";
+  font-weight: bold;
+  font-size: 0.8rem;
 }
